fix: Z-index of homescreen

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ height: 1080px;
 position: absolute;
 top: 0;
 left: 0;
+z-index: 1;
 background: url(../img/home.svg);
 }
 .home h1 {
